# Rust-Web-Programming-2nd-Edition

./: .gitignore  README.md
book_copy/: .gitignore
book_copy/chapter01/: copy.rs  immutable_borrow.rs  macro_rules.rs  move.rs  rust_strings.rs  structs_with_functions.rs  traits.rs
book_copy/chapter02/processing_traits_and_structs/: Cargo.toml
chapter01/: error_checking.rs  generics.rs  hashmaps.rs  hello_world.rs  lifetimes.rs  mutable_borrow.rs  python_string_loop.py  scopes.rs  structs.rs  vectors_and_arrays.rs
chapter01/building_structs/: basic_struct.rs  enums.rs  verifying_with_traits.rs  with_traits.rs
chapter01/controlling_variable_ownership/: copying_variables.rs  immutable_borrowing.rs  lifetimes.rs  moving_variables.rs  multiple_mutable_borrow.rs  multiple_referrences.rs  mutable_borrow.rs  scopes.rs
chapter01/handling_results_and_errors/: error_check.rs
chapter01/mapping_data_with_hashmaps/: .gitignore  extracting_from_profile_map.rs  profile_map.rs
chapter01/metaprogramming_with_macros/: basic_generic.rs  capitalize.rs  multi_generic.rs
chapter01/reviewing_data_type_and_variables_in_rust/: hello_world  str_error.rs
chapter01/storing_data_in_vectors_and_arrays/: enums.rs  looping_through_an_array.rs  mutable_array.rs  mutable_vector.rs  slices.rs
chapter01/using_strings_in_rust/: passing_strings_into_function.rs  referencing_str_in_function.rs
chapter02/: .gitignore  hello_world.rs
chapter02/building_to_do_structs/web_app/: Cargo.toml
chapter02/factories/: Cargo.toml
chapter02/interacting_with_cargo/: Cargo.toml
chapter02/interacting_with_cargo/src/: main.rs
chapter02/interacting_with_cargo/web_app_with_clap/: Cargo.toml
chapter02/processing_traits_and_structs/: state.json
chapter02/processing_traits_and_structs/src/: state.rs
chapter02/processing_traits_and_structs/web_app/: state.json
chapter02/reading_and_writing_json_files/web_app/: .gitignore  state.json
chapter02/reading_json_files/src/: main.rs
chapter02/structuring_code/src/: main.rs
chapter03/understanding_async_await/: Cargo.toml
chapter03/understanding_async_programming/: basic_threads.rs
chapter03/understanding_closures/: Cargo.toml  basic_closures.rs  closure_scopes.rs  closures_with_boxes.rs  moving_closures.rs  passing_to_closures.rs
chapter06/running_docker_in_the_background_with_bash_scripts/web_app/: Cargo.toml
chapter07/congifuring_expiration_of_auth_tokens/web_app/: Cargo.toml
chapter07/congifuring_expiration_of_auth_tokens/web_app/src/: jwt.rs  main.rs
chapter07/congifuring_expiration_of_auth_tokens/web_app/src/views/users/: create.rs
chapter14/: .gitignore
chapter15/: .gitignore
chapter17/messages_and_runner_actor/echo_server/server/: Cargo.toml
chapter17/messages_and_runner_actor/rocket_app/: .gitignore  Cargo.toml  docker-compose.yml
chapter17/messages_and_runner_actor/rocket_app/migrations/2022-04-24-171018_create_to_do_items/: up.sql
chapter17/messages_and_runner_actor/rocket_app/scripts/: ready_newman.py
chapter17/messages_and_runner_actor/rocket_app/src/: database.rs  jwt.rs
chapter17/messages_and_runner_actor/rocket_app/src/json_serialization/: to_do_items.rs
chapter17/messages_and_runner_actor/rocket_app/src/views/: mod.rs
chapter17/messages_and_runner_actor/rocket_app/src/views/to_do/: edit.rs
chapter17/state_actor/hyper_actors/: Cargo.toml
chapter18/defining_tasks/task_queue/: Cargo.toml  docker-compose.yml
chapter18/defining_tasks/task_queue/src/: main.rs
chapter18/integrating_routing_in_the_http_server/redis_queue/: Cargo.toml
chapter18/integrating_routing_in_the_http_server/redis_queue/src/: main.rs
chapter18/integrating_routing_in_the_http_server/redis_queue/src/tasks/: add.rs
(+559 files in other folders)
