[package]
name = "web_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
serde_json = "1.0.59"
serde = { version = "1.0.136", features = ["derive"] }
actix-service = "2.0.2"
futures = "0.3.21"
actix-cors = "0.6.1"
diesel = { version = "1.4.8", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
chrono = {version = "0.4.19", features = ["serde"]}
serde_yaml = "0.8.23"
lazy_static = "1.4.0"
bcrypt = "0.13.0"
uuid = {version = "1.0.0", features = ["serde", "v4"]}
jsonwebtoken = "8.1.0"
