[package]
name = "task_queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14.20", features = ["full"] }
serde_json = "1.0.86"
serde = { version = "1.0.136", features = ["derive"] }
bytes = "1.2.1"
redis = "0.22.1"
bincode = "1.0"
